# spdlog-bazel

./: BUILD.bazel  WORKSPACE
