package(default_visibility = ["//visibility:public"])
load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "srcs",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)

cmake(
    name = "libspdlog", 
    lib_source = ":srcs",
    cache_entries = { 
        #"SPDLOG_BUILD_EXAMPLE": "OFF",
    },
    out_lib_dir = "lib64",
    out_static_libs = ["libspdlog.a"],
    # out_shared_libs = ["libspdlog.so"],
)
